--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yasser Muhammed</title>
     <!-- SEO -->
+    <link rel="canonical" href="https://yasserrsportfolio.vercel.app/">
     <meta name="description" content="This is my portfolio which showcases my skills and experiences">
-    <meta name="keywords" content="Yasser, Mohamed, Portfolio, Web Developer, React, Node.js, MongoDB , HTML, CSS, JavaScript , Vite , Next.js">
+    <meta name="keywords" content="Yasser, Mohamed, Portfolio, Web Developer, React, Node.js, MongoDB, HTML, CSS, JavaScript, Vite, Next.js, Front-end Developer, Back-end Developer">
     <meta name="author" content="Yasser Mohamed">
     <meta name="robots" content="index, follow">
     <meta name="revisit-after" content="1 days">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yasser-portfolio.vercel.app/">
+    <meta property="og:url" content="https://yasserrsportfolio.vercel.app/">
     <meta property="og:title" content="Yasser Mohamed - Portfolio">
     <meta property="og:description" content="This is my portfolio which showcases my skills and experiences">
-    <meta property="og:image" content="https://yasser-portfolio.vercel.app/yasserNo-bg.png">
+    <meta property="og:image" content="https://yasserrsportfolio.vercel.app/yasserNo-bg.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://yasser-portfolio.vercel.app/">
+    <meta name="twitter:url" content="https://yasserrsportfolio.vercel.app/">
     <meta name="twitter:title" content="Yasser Mohamed - Portfolio">
     <meta name="twitter:description" content="This is my portfolio which showcases my skills and experiences">
-    <meta name="twitter:image" content="https://yasser-portfolio.vercel.app/yasserNo-bg.png">
+    <meta name="twitter:image" content="https://yasserrsportfolio.vercel.app/yasserNo-bg.png">
   </head>
   <body>
     <div id="root"></div>
